<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="10dp"
	android:animateLayoutChanges="true"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text="@string/name_colon"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			/>
		
		<EditText
			android:id="@+id/et_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:inputType="textPersonName"
			tools:text="MeansuredValue_1"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text="@string/resolution_colon"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			/>
		
		<EditText
			android:id="@+id/et_resolution"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:inputType="numberDecimal"
			tools:text="0.01"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text="@string/values_colon"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
		
		<EditText
			android:id="@+id/et_values"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:ems="10"
			android:hint="@string/hint_values"
			android:inputType="textMultiLine"
			tools:text="1.0\n2.0\n3.0"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		android:gravity="center_vertical"
		android:orientation="vertical">
		
		<Button
			android:id="@+id/b_run"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text="@string/run"/>
		
		<TextView
			android:id="@+id/tv_valuesInfo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			android:textSize="18sp"
			android:visibility="gone"
			tools:text="count=3\naverage=2.0\nuncertaintyA=0.32\nuncertaintyB=0.57"
			tools:visibility="visible"/>
	
	</LinearLayout>


</LinearLayout>